--- a/.env
+++ b/.env
@@ -4,5 +4,7 @@ APP_NAME="Team 5 - Twitter"
 DB_CONNECTION_STRING="mongodb://127.0.0.1/team5-twitter-db"
 SESSION_SECRET="twitterSecretTema5"
 
+JWT_SECRET="STRINGsecreto"
+
 TOTAL_USERS=7
 TOTAL_TWEETS=80
