Co-authored-by: Madozito <Madozito@users.noreply.github.com> Co-authored-by: Emi <Emiliano711@users.noreply.github.com>

--- a/.env
+++ b/.env
@@ -1,10 +1,6 @@
 APP_PORT=8000
-APP_NAME="Team 5 - Twitter"
-
-DB_CONNECTION_STRING="mongodb://127.0.0.1/team5-twitter-db"
-SESSION_SECRET="twitterSecretTema5"
-
-JWT_SECRET="STRINGsecreto"
-
+APP_NAME=Team5-Twitter
+DB_CONNECTION_STRING=mongodb+srv://twitter-t5-hack-23:TdNgcxMDcIpnkWV1@twitter-t5-hack-23.q7gr0.mongodb.net/test
+JWT_SECRET=STRINGsecreto
 TOTAL_USERS=7
 TOTAL_TWEETS=80
