--- a/.env
+++ b/.env
@@ -4,3 +4,12 @@ DB_CONNECTION_STRING=mongodb+srv://twitter-t5-hack-23:TdNgcxMDcIpnkWV1@twitter-t
 JWT_SECRET=STRINGsecreto
 TOTAL_USERS=7
 TOTAL_TWEETS=80
+  
+
+
+#APP_PORT=8000
+#APP_NAME=Team5-Twitter
+#DB_CONNECTION_STRING=mongodb://127.0.0.1/team5-twitter-db
+#JWT_SECRET=STRINGsecreto
+#TOTAL_USERS=7
+#TOTAL_TWEETS=80
